--- a/src/css/modern.css
+++ b/src/css/modern.css
@@ -65,7 +65,7 @@
     transition: all 500ms ease, backdrop-filter 0ms ease;
 }
 .tinymenu {
-    display: block;
+    display: inline-block;
     width: max-content;
     padding: 0.3rem;
     height: 1.7rem;
